[package]
name = "ump"
version = "0.7.0"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
categories = [ "concurrency", "asynchronous" ]
keywords = [ "channel", "threads", "sync", "message-passing" ]
repository = "https://github.com/openqrnch/ump"
description = "Micro message passing library for threads/tasks communication."

[dependencies]
sigq = { version = "0.9" }

[dev-dependencies]
criterion = "0.3"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "add_server"
harness = false

